--- a/themes/hemingway17/package.json
+++ b/themes/hemingway17/package.json
@@ -4,6 +4,8 @@
     "bulma": "^0.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "gulp-concat": "*",
+    "gulp-uglify": "^1.5.1"
   }
 }
